use getDeclaredConstructor when create new instance